add service items and links

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,48 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
+    <main>
+      <div class="service">
+        <ul class="service__list">
+          <li class="service__item">
+            <a href="javascript:void(0);" class="service__link" title="">Упаковочное
+              оборудование</a>
+            <div class="service__front">
+              <img src="images/1.jpg" alt="">
+            </div>
+          </li>
+          <li class="service__item">
+            <a href="javascript:void(0);" class="service__link" title="">Упаковочные
+              материалы</a>
+            <div class="service__front">
+              <img src="images/2.jpg" alt="">
+            </div>
+          </li>
+          <li class="service__item">
+            <a href="javascript:void(0);" class="service__link" title="">Автоматическое
+              оборудование</a>
+            <div class="service__front">
+              <img src="images/3.jpg" alt="">
+            </div>
+          </li>
+          <li class="service__item">
+            <a href="javascript:void(0);" class="service__link" title="">Технологическое
+              оборудование</a>
+            <div class="service__front">
+              <img src="images/4.jpg" alt="">
+            </div>
+          </li>
+          <li class="service__item">
+            <a href="javascript:void(0);" class="service__link" title="">Технологическое
+              обслуживание</a>
+            <div class="service__front">
+              <img src="images/5.jpg" alt="">
+            </div>
+          </li>
+
+        </ul>
+      </div>
+    </main>
 
   </body>
 </html>
