--- a/app/index.html
+++ b/app/index.html
@@ -9,48 +9,60 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <main>
-      <div class="service">
-        <ul class="service__list">
-          <li class="service__item">
-            <a href="javascript:void(0);" class="service__link" title="">Упаковочное
-              оборудование</a>
-            <div class="service__front">
-              <img src="images/1.jpg" alt="">
-            </div>
-          </li>
-          <li class="service__item">
-            <a href="javascript:void(0);" class="service__link" title="">Упаковочные
-              материалы</a>
-            <div class="service__front">
-              <img src="images/2.jpg" alt="">
-            </div>
-          </li>
-          <li class="service__item">
-            <a href="javascript:void(0);" class="service__link" title="">Автоматическое
-              оборудование</a>
-            <div class="service__front">
-              <img src="images/3.jpg" alt="">
-            </div>
-          </li>
-          <li class="service__item">
-            <a href="javascript:void(0);" class="service__link" title="">Технологическое
-              оборудование</a>
-            <div class="service__front">
-              <img src="images/4.jpg" alt="">
-            </div>
-          </li>
-          <li class="service__item">
-            <a href="javascript:void(0);" class="service__link" title="">Технологическое
-              обслуживание</a>
-            <div class="service__front">
-              <img src="images/5.jpg" alt="">
-            </div>
-          </li>
+    <div class="wrapper">
+      <main>
+        <div class="service">
+          <ul class="service__list">
+            <li class="service__item">
+              <a href="javascript:void(0);" class="service__link" title="">Упаковочное
+                оборудование</a>
+              <div class="service__front">
+                <img src="images/1.jpg" alt="">
+              </div>
+            </li>
+            <li class="service__item">
+              <a href="javascript:void(0);" class="service__link" title="">Упаковочные
+                материалы</a>
+              <div class="service__front">
+                <img src="images/2.jpg" alt="">
+              </div>
+            </li>
+            <li class="service__item">
+              <a href="javascript:void(0);" class="service__link" title="">Автоматическое
+                оборудование</a>
+              <div class="service__front">
+                <img src="images/3.jpg" alt="">
+              </div>
+            </li>
+            <li class="service__item">
+              <a href="javascript:void(0);" class="service__link" title="">Технологическое
+                оборудование</a>
+              <div class="service__front">
+                <img src="images/4.jpg" alt="">
+              </div>
+            </li>
+            <li class="service__item">
+              <a href="javascript:void(0);" class="service__link" title="">Технологическое
+                обслуживание</a>
+              <div class="service__front">
+                <img src="images/5.jpg" alt="">
+              </div>
+            </li>
 
-        </ul>
-      </div>
-    </main>
+          </ul>
+        </div>
+      </main>
 
+      <footer class="footer">
+        <div class="footer__info">
+          <a href="tel:(812) 325 26 72" class="footer__info-tel" title="Звоните нам!">(812) 325 26 72</a>
+          <img src="images/logo.png" alt="МЕРПАСА">
+          <span class="footer__info-email">info@merpasa.ru</span>
+        </div>
+        <div class="footer__copyright">
+          <span>2014 &copy; &ldquo;МЕРПАСА&rdquo;</span>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
