--- a/app/index.html
+++ b/app/index.html
@@ -14,55 +14,279 @@
         <div class="service">
           <ul class="service__list">
             <li class="service__item">
-              <a href="javascript:void(0);" class="service__link" title="">Упаковочное
-                оборудование</a>
+              <a href="javascript:void(0);" class="service__link js-link" title="">Упаковочное оборудование</a>
               <div class="service__front">
                 <img src="images/1.jpg" alt="">
               </div>
+              <div class="service__side">
+                <ul class="service__side-list">
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Горизонтальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вертикальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">трейсилеры</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоусадочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоформовочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Паллетоупаковщики</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вакуумное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка на подложку</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка длинномерных изделий</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">клипсаторы</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">обвязчики мягкими лентами</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">формовщики коробов</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">заклейщики коробов скотчем</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">весовое</a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="service__item">
-              <a href="javascript:void(0);" class="service__link" title="">Упаковочные
-                материалы</a>
+              <a href="javascript:void(0);" class="service__link js-link" title="">Упаковочные материалы</a>
               <div class="service__front">
                 <img src="images/2.jpg" alt="">
               </div>
+              <div class="service__side">
+                <ul class="service__side-list">
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Горизонтальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вертикальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">трейсилеры</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоусадочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоформовочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Паллетоупаковщики</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вакуумное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка на подложку</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка длинномерных изделий</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">клипсаторы</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">обвязчики мягкими лентами</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">формовщики коробов</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">заклейщики коробов скотчем</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">весовое</a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="service__item">
-              <a href="javascript:void(0);" class="service__link" title="">Автоматическое
-                оборудование</a>
+              <a href="javascript:void(0);" class="service__link js-link" title="">Автоматическое оборудование</a>
               <div class="service__front">
                 <img src="images/3.jpg" alt="">
               </div>
+              <div class="service__side">
+                <ul class="service__side-list">
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Горизонтальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вертикальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">трейсилеры</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоусадочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоформовочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Паллетоупаковщики</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вакуумное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка на подложку</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка длинномерных изделий</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">клипсаторы</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">обвязчики мягкими лентами</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">формовщики коробов</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">заклейщики коробов скотчем</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">весовое</a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="service__item">
-              <a href="javascript:void(0);" class="service__link" title="">Технологическое
-                оборудование</a>
+              <a href="javascript:void(0);" class="service__link js-link" title="">Технологическое оборудование</a>
               <div class="service__front">
                 <img src="images/4.jpg" alt="">
               </div>
+              <div class="service__side">
+                <ul class="service__side-list">
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Горизонтальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вертикальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">трейсилеры</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоусадочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоформовочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Паллетоупаковщики</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вакуумное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка на подложку</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка длинномерных изделий</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">клипсаторы</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">обвязчики мягкими лентами</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">формовщики коробов</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">заклейщики коробов скотчем</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">весовое</a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="service__item">
-              <a href="javascript:void(0);" class="service__link" title="">Технологическое
-                обслуживание</a>
+              <a href="javascript:void(0);" class="service__link js-link" title="">Техническое обслуживание</a>
               <div class="service__front">
                 <img src="images/5.jpg" alt="">
               </div>
+              <div class="service__side">
+                <ul class="service__side-list">
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Горизонтальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вертикальное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">трейсилеры</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоусадочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">термоформовочное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">Паллетоупаковщики</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">вакуумное</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка на подложку</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">упаковка длинномерных изделий</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">клипсаторы</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">обвязчики мягкими лентами</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">формовщики коробов</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">заклейщики коробов скотчем</a>
+                  </li>
+                  <li class="service__side-item">
+                    <a class="service__side-link" href="javascript:void(0);" title="">весовое</a>
+                  </li>
+                </ul>
+              </div>
             </li>
-
-          </ul>
-        </div>
       </main>
 
       <footer class="footer">
         <div class="footer__info">
           <a href="tel:(812) 325 26 72" class="footer__info-tel" title="Звоните нам!">(812) 325 26 72</a>
-          <img src="images/logo.png" alt="МЕРПАСА">
-          <span class="footer__info-email">info@merpasa.ru</span>
+          <a href="index.html" class="footer__info-logo js-link-index" title=""><img src="images/logo.png" alt="МЕРПАСА"></a>
+          <a href="mailto: info@merpasa.ru" class="footer__info-email">info@merpasa.ru</a>
         </div>
         <div class="footer__copyright">
           <span>2014 &copy; &ldquo;МЕРПАСА&rdquo;</span>
         </div>
       </footer>
     </div>
+
+    <script src="scripts/service/service.js"></script>
   </body>
 </html>
