create inner pages, add function changing url with ajax

--- a/app/index.html
+++ b/app/index.html
@@ -278,7 +278,7 @@
       <footer class="footer">
         <div class="footer__info">
           <a href="tel:(812) 325 26 72" class="footer__info-tel" title="Звоните нам!">(812) 325 26 72</a>
-          <a href="index.html" class="footer__info-logo js-link-index" title=""><img src="images/logo.png" alt="МЕРПАСА"></a>
+          <a href="index.html" class="footer__info-logo" title=""><img src="images/logo.png" class="js-footer-logo" alt="МЕРПАСА"></a>
           <a href="mailto: info@merpasa.ru" class="footer__info-email">info@merpasa.ru</a>
         </div>
         <div class="footer__copyright">
@@ -288,5 +288,6 @@
     </div>
 
     <script src="scripts/service/service.js"></script>
+    <script src="scripts/footer/footer.js"></script>
   </body>
 </html>
