save color in sessionStorage

--- a/app/index.html
+++ b/app/index.html
@@ -282,7 +282,7 @@
           <a href="mailto: info@merpasa.ru" class="footer__info-email">info@merpasa.ru</a>
         </div>
         <div class="footer__copyright">
-          <span>2014 &copy; &ldquo;МЕРПАСА&rdquo;</span>
+          <span>2014-2017 &copy; &ldquo;МЕРПАСА&rdquo;</span>
         </div>
       </footer>
     </div>
