--- a/app/inner5.html
+++ b/app/inner5.html
@@ -13,8 +13,8 @@
       <main>
         <div class="service">
           <ul class="service__list">
-            <li class="service__item">
-              <a href="javascript:void(0);" class="service__link" title="">Техническое обслуживание</a>
+            <li class="service__item service__item--inner">
+              <a href="javascript:void(0);" class="service__link js-link" title="">Техническое обслуживание</a>
               <div class="service__front">
                 <img src="images/1.jpg" alt="">
               </div>
@@ -73,11 +73,11 @@
       <footer class="footer">
         <div class="footer__info">
           <a href="tel:(812) 325 26 72" class="footer__info-tel" title="Звоните нам!">(812) 325 26 72</a>
-          <a href="index.html" class="footer__info-logo" title=""><img src="images/logo.png" alt="МЕРПАСА"></a>
+          <a href="index.html" class="footer__info-logo" title=""><img src="images/logo.png" class="js-footer-logo" alt="МЕРПАСА"></a>
           <a href="mailto: info@merpasa.ru" class="footer__info-email">info@merpasa.ru</a>
         </div>
         <div class="footer__copyright">
-          <span>2014 &copy; &ldquo;МЕРПАСА&rdquo;</span>
+          <span>2014-2017 &copy; &ldquo;МЕРПАСА&rdquo;</span>
         </div>
       </footer>
     </div>
